force-app/main/default/objects/CBK_IntegrationSetting__c/CBK_IntegrationSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CBK Integration Setting</label>
</CustomObject>