force-app/main/default/objects/CBK_IntegrationSetting__c/fields/CBK_ContentType__c.field-meta.xml
<CustomField>
    <fullName>CBK_ContentType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>