force-app/main/default/objects/CBK_IntegrationSetting__c/fields/CBK_Method__c.field-meta.xml
<CustomField>
    <fullName>CBK_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>