force-app/main/default/objects/CBK_IntegrationSetting__c/fields/CBK_TimeOut__c.field-meta.xml
<CustomField>
    <fullName>CBK_TimeOut__c</fullName>
    <label>Time-Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>