force-app/main/default/objects/CBK_IntegrationSetting__c/fields/CBK_Traza_Respuesta_Header__c.field-meta.xml
<CustomField>
    <fullName>CBK_Traza_Respuesta_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Por si queremos la traza de respuesta</description>
    <label>Traza Respuesta Header</label>
    <type>Checkbox</type>
</CustomField>