force-app/main/default/objects/CBK_IntegrationSetting__c/fields/RegistroTrazaIntegracion__c.field-meta.xml
<CustomField>
    <fullName>RegistroTrazaIntegracion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox para indicar si la integración ha de dejar registro en el objeto de traza de integración CC_Traza_Int (por defecto estará desactivado)</description>
    <label>Registro Traza Integración</label>
    <type>Checkbox</type>
</CustomField>