force-app/main/default/objects/CBK_IntegrationSetting__c/fields/ResourcePath__c.field-meta.xml
<CustomField>
    <fullName>ResourcePath__c</fullName>
    <description>Resource Path del servicio expuesto. Si en la clase Apex que contiene el servicio REST se define un urlMapping de /MyResource/*, el valor a indicar en este campo, correspondería con la propiedad resourcePath de la restRequest: /services/apexrest/MyResource/*.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Resource Path del servicio expuesto. Si en la clase Apex que contiene el servicio REST se define un urlMapping de /MyResource/*, el valor a indicar en este campo, correspondería con la propiedad resourcePath de la restRequest: /services/apexrest/MyResource/*.</inlineHelpText>
    <label>Resource Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>