force-app/main/default/objects/CBK_IntegrationSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NamedCredential__c</columns>
    <columns>ResourcePath__c</columns>
    <columns>CBK_IsInput__c</columns>
    <columns>RegistroTrazaIntegracion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>