force-app/main/default/objects/CBK_IntegrationSetting__c/listViews/Entrada.listView-meta.xml
<ListView>
    <fullName>Entrada</fullName>
    <columns>NAME</columns>
    <columns>ResourcePath__c</columns>
    <columns>CBK_IsInput__c</columns>
    <columns>RegistroTrazaIntegracion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBK_IsInput__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Entrada</label>
    <language>en_US</language>
</ListView>