force-app/main/default/objects/CBK_IntegrationSetting__c/listViews/Salida.listView-meta.xml
<ListView>
    <fullName>Salida</fullName>
    <columns>NAME</columns>
    <columns>NamedCredential__c</columns>
    <columns>CBK_IsInput__c</columns>
    <columns>RegistroTrazaIntegracion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBK_IsInput__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Salida</label>
    <language>en_US</language>
</ListView>